# california-housing-project

./: Makefile  README.md  pyproject.toml  requirements.txt
config/: project.yaml
docs/: PROJECT_PLAN.md  portfolio_brief.md
notebook/: housing_analysis.ipynb
reports/: metrics.json
scripts/: run_pipeline.py
src/housing_prices/: __init__.py  config.py  data.py  features.py  modeling.py  pipeline.py  visualization.py
tests/: test_features.py
